# bevy_ios_toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  Package.swift  README.md
Sources/Ads/: AdMobBridge.swift
Sources/GameCenter/: GameKitBridge.swift
Sources/Platform/: AudioSession.swift  BootShield.swift  CupertinoPlatform.swift  Haptics.swift  Links.swift  PlatformBridge.swift  PowerState.swift  SafeArea.swift  Share.swift
Sources/Review/: ReviewBridge.swift
Sources/Store/: StoreKitBridge.swift
demo/: Cargo.toml  Makefile
demo/ios/: .gitignore  AdMobBridge.swift  CupertinoPlatform.swift  Info.plist  IosToolkitDemo.entitlements  PrivacyInfo.xcprivacy  README.md  build_rust.sh  main.m  project.yml
demo/src/: lib.rs  main.rs
examples/: ads.rs  store.rs
src/: att.rs  ffi.rs  gamekit.rs  lib.rs  review.rs
src/ads/: backend_fake.rs  backend_ios.rs  mod.rs
src/platform/: boot_shield.rs  haptics.rs  links.rs  mod.rs  power.rs  safe_area.rs  share.rs
src/platform/lifecycle/: audio.rs  mod.rs
src/store/: backend_fake.rs  backend_ios.rs  mod.rs
swift/: AdMobBridge.swift  AppTrackingBridge.swift  StoreKitBridge.swift
